--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ pydantic_core==2.23.4
 python-dotenv==1.0.1
 requests==2.32.3
 sniffio==1.3.1
+stripe==11.1.0
 tqdm==4.66.5
 typing_extensions==4.12.2
 urllib3==2.2.3
